--- a/css/25-selector.css
+++ b/css/25-selector.css
@@ -1,5 +1,31 @@
 /* CSS 선택자(Selector) */
+/* 컨트롤 + / 주석달기*/
+
+/* 전체 선택자 */
+* {
+  color: inherit;
+}
+/* 요소(태크) 선택자 */
 body {
   font-family: "SUIT";
+  margin: 0;
   font-weight: 300;
+  background-color: black;
+  color: hsla(110, 100%, 100%, 1)
+}
+/* 클래스 선택자(Class Selector) */
+.fancy {
+  font-weight: bold;
+  text-shadow: 4px 4px 3px #77f;
+}
+
+ul.menu {
+  margin: 0;
+  padding-left: 0;
+  color: #f00;
+}
+
+/* 아이디 선택자 */
+#demo {
+  border: red 5px solid;
 }
